[package]
name = "dupl-server"
version = "0.6.3"
authors = ["Alexey Voznyuk <me@swizard.info>"]

[dependencies]
getopts = "0.2"
serde = "0.6"
simple-signal = "1.0"
unix-daemonize = "0.1"
zmq = { git = "https://github.com/erickt/rust-zmq.git" }
bin-merge-pile = { git = "https://bitbucket.org/swizard/bin-merge-pile.git" }
dupl_server_proto = { path = "dupl-server-proto" }
hash-dupl = { git = "git://dev.swizard.info/hash-dupl" }
yauid-rs = { git = "git://dev.swizard.info/yauid-rs" }

[dev-dependencies]
rand = "0.3"
