[package]
name = "dupl-server"
version = "0.6.6"
authors = ["Alexey Voznyuk <me@swizard.info>"]

[dependencies]
getopts = "0.2"
serde = "0.6"
simple-signal = "1.0"
unix-daemonize = "0.1"
zmq = { git = "https://github.com/erickt/rust-zmq.git" }
bin-merge-pile = { git = "https://bitbucket.org/swizard/bin-merge-pile.git" }
dupl_server_proto = { git = "https://github.com/swizard0/dupl-server-proto.git" }
hash-dupl = { git = "https://github.com/swizard0/hash-dupl.git" }
yauid-rs = { git = "https://github.com/swizard0/yauid-rs.git" }

[dev-dependencies]
rand = "0.3"
